--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@react-spring/three": "^9.7.5",
-    "@react-three/drei": "^9.121.4",
+    "@react-three/drei": "^9.121.5",
     "@react-three/fiber": "^8.17.14",
+    "@react-three/postprocessing": "^2.19.1",
     "next": "15.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,8 +21,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/three": "^0.173.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
