--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,10 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "global.d.ts"
+    "global.d.ts",
+    "components/Model.jsx",
+    "components/Scene.jsx",
+    "**/*.glb"
   ],
   "exclude": ["node_modules"]
 }
